--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       <h2>Age</h2>
       <p>15 Year Old</p>
       <h2>Hobby</h2>
-      <p>Workout Video and Workout</p>
+      <p>Bulu Tangkis dan Video Game</p>
       <h2>Class and Major</h2>
       <p>X PPLG 1</p>
       <div class="link">
