--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 <body>
   <div class="container">
     <div class="card">
-      <img src="profil.jpg" width="120px" alt="Muhammad Agitya">
+      <img src="profil.jpg" width="120px" height="120px" border-radius="20px" alt="Muhammad Agitya">
       <h2>Name</h2>
       <p>Kemas Dafin Hilmi</p>
       <h2>School</h2>
